--- a/src/css/credit-card.css
+++ b/src/css/credit-card.css
@@ -1,6 +1,6 @@
 .cc {
     background: no-repeat center/cover;
-    background-image: url("/cc-bg.svg");
+    background-image: url("./images/cc-bg.svg");
     width: 36rem;
     height: 23rem;
     padding: 2rem;
